# cli

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  gemini-extension.json  package.json
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md
.cursor-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
.opencode/: INSTALL.md
crates/tuhucar-car/: Cargo.toml
crates/tuhucar-car/src/: lib.rs  matcher.rs  models.rs
crates/tuhucar-cli/: Cargo.toml
crates/tuhucar-cli/src/: lib.rs  main.rs
crates/tuhucar-cli/src/commands/: car.rs  config.rs  knowledge.rs  mod.rs  skill.rs
crates/tuhucar-cli/tests/: integration.rs
crates/tuhucar-core/: Cargo.toml
crates/tuhucar-core/src/: command.rs  config.rs  error.rs  http.rs  lib.rs  mcp.rs  output.rs  types.rs  update.rs
crates/tuhucar-knowledge/: Cargo.toml
crates/tuhucar-knowledge/src/: lib.rs  models.rs  query.rs
npm/: package.json
npm/scripts/: cleanup-package.js  install.js  platform.js  prepare-package.js
scripts/: install.sh  render-homebrew-formula.sh
skills/clawhub/tuhucar-knowledge-assistant/: SKILL.md
skills/clawhub/tuhucar-knowledge-assistant/references/: command-reference.md
skills/tuhucar-car-assistant/: SKILL.md
skills/tuhucar-car-assistant/references/: command-reference.md
skills/tuhucar-shared/: SKILL.md
