[workspace]
members = [
    "crates/tuhucar-core",
    "crates/tuhucar-car",
    "crates/tuhucar-knowledge",
    "crates/tuhucar-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tuhucar/cli"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
async-trait = "0.1"
schemars = "0.8"
dirs = "6"
