[package]
name = "tuhucar-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
schemars = { workspace = true }
dirs = "6"
